--- a/src/dapp/index.html
+++ b/src/dapp/index.html
@@ -58,9 +58,7 @@
         
         <div id="oracles" class="section">
             <h2>Oracles</h2>
-            <select id="oracle-flight">
-                <option>Select Flight for Status</option>
-            </select>
+            <input type="text" id="oracle-flight" placeholder="Airline Address">
             <button id="submit-oracle">Submit to Oracles</button>
         </div>
     </main>
